trunk/Archive2/ec/8b42c073a7c963/output
main.cpp: In instantiation of 'typename std::enable_if<(! std::is_same<typename std::iterator_traits<_Iterator1>::iterator_category, std::random_access_iterator_tag>::value)>::type sorty(Iterator1, Iterator1, Iterator2) [with Iterator1 = __gnu_cxx::__normal_iterator<int*, std::vector<int> >; Iterator2 = std::__detail::_Node_iterator<double, true, false>; typename std::enable_if<(! std::is_same<typename std::iterator_traits<_Iterator1>::iterator_category, std::random_access_iterator_tag>::value)>::type = void]':
main.cpp:41:60:   required from here
main.cpp:26:5: error: static assertion failed: Iterator2 must be random-access iterator!
     static_assert(AlwaysFalse<Iterator2>{}, "Iterator2 must be random-access iterator!");
     ^
